--- a/Game.html
+++ b/Game.html
@@ -12,8 +12,8 @@
     <link href="main.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1 id="heading">Welcome to the magic 8 ball</h1>
+    <!--got rid of uneeded header-->  
+    <h1 id="heading">Welcome to the magic 8 ball</h1>
     
 <main class="main-content">
     <h2>Ask the Magic 8-Ball a Question:</h2>
@@ -24,6 +24,7 @@
     <!--Button to get 8-Ball response-->
     <button id="askButton" onclick="Magic8Ball();">
         <img src="8ball_button.jpg" alt="Magic 8 Ball">
+    </button><!--added missing tag-->
 
     <!--Answer display-->
     <p id="finalResult"></p>
